--- a/style.css
+++ b/style.css
@@ -1293,6 +1293,18 @@ a:focus {
   text-align: center;
 }
 
+#partner-location a {
+  color: var(--primary-blue);
+  font-weight: 600;
+  text-decoration: none;
+}
+
+#partner-location a:hover {
+  color: var(--secondary-orange);
+  text-decoration: underline;
+}
+
+
 /* Estilização para a seção Hero do Parceiro (partner.html) */
 .partner-hero {
   position: relative;
@@ -1400,8 +1412,8 @@ a:focus {
 }
 
 #partner-gallery img {
-  width: 100%;
-  height: 200px;
+  width: 71%;
+  height: 16rem;
   object-fit: cover;
   border-radius: var(--radius);
   box-shadow: var(--shadow-sm);
