--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   
   /* Cores Neutras */
   --white: #ffffff;
-  --gray-50: #f9fafb;
+  --gray-50: #fbf9f9;
   --gray-100: #f3f4f6;
   --gray-200: #e5e7eb;
   --gray-300: #d1d5db;
